<resources>
    <string name="app_name">TriptoTracker</string>
    <string name="summary_intro">A Whole New Way To Manage Your Spending</string>
    <string name="first_summary_point">Know How You Spend</string>
    <string name="second_summary_point">Manage Your FInances</string>
    <string name="sign_up_btn">Sign Up For Free</string>
    <string name="signin_btn">sign in</string>
    <string name="signin_header">sign in</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="signup_header">sign up</string>
    <string name="email_hint">jamesdoe@mail.com</string>
    <string name="password_hint">password</string>
    <string name="username_label">Username</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="member_prompt">Already a member?</string>
    <string name="username_hint">James</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_summary">Set a new password for you log in</string>
    <string name="new_password_label">Enter new password</string>
    <string name="confirm_new_password_label">Confirm new password</string>
    <string name="submit">submit</string>
    <string name="your_email_label">Enter your email</string>
    <string name="forgot_password_summary">It is okay to forget your password because we are humans. Let\'s help you get back your login details.</string>
    <string name="forgot_password_header">Forgot Password</string>
    <string name="check_mail">Check your mail</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="past_week">Past Week</string>
    <string name="default_value">500</string>
    <string name="default_amount">N25,000</string>
    <string name="past_month">Past Month</string>
    <string name="past_year">Past Year</string>
    <string name="manage_expenses_header">How have you spent your money so far?</string>
    <string name="record_expenses">Record Your Expenses</string>
    <string name="set_budget">Set Budget</string>
    <string name="manage_expenses">Manage Your Expenses</string>
    <string name="expense_tracking">Expense Tracking</string>
    <string name="specify_period">Specify Period</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="date_start_hint">02 - Sep - 2019</string>
    <string name="date_end_hint">04 - Sep - 2019</string>
    <string name="generate">Generate</string>
    <string name="transactions">Transactions</string>
    <string name="date">Date</string>
    <string name="items_category">Item/Category</string>
    <string name="amount">Amount</string>
    <string name="more_transactions">More transactions...</string>
    <string name="download_format">Download format:</string>
    <string name="download">Download</string>
    <string name="open_dropdown">Open Dropdown</string>
    <string name="user">User</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
</resources>
