<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passwordResetLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".views.fragments.PasswordresetFragment">

    <TextView
        android:id="@+id/passwordForgotHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/forgot_password_header"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordForgotHeaderSummary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/forgot_password_summary"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/passwordForgotHeader"
        app:layout_constraintStart_toStartOf="@+id/passwordForgotHeader"
        app:layout_constraintTop_toBottomOf="@+id/passwordForgotHeader" />

    <LinearLayout
        android:id="@+id/passwordForgotEmailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordForgotHeaderSummary">

        <TextView
            android:id="@+id/passwordForgotEmailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:labelFor="@id/passwordForgotEmailEdittext"
            android:text="@string/your_email_label"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passwordForgotEmailEdittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edittext"
            android:inputType="textPassword"
            tools:ignore="Autofill" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_btn_blue"
        android:fontFamily="@font/raleway"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordForgotEmailLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordForgotEmailLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordForgotEmailLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>