<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passwordResetLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".views.fragments.PasswordresetFragment">

    <TextView
        android:id="@+id/passwordResetHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/reset_password"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordResetHeaderSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/raleway"
        android:text="@string/reset_password_summary"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/passwordResetHeader"
        app:layout_constraintStart_toStartOf="@+id/passwordResetHeader"
        app:layout_constraintTop_toBottomOf="@+id/passwordResetHeader" />

    <LinearLayout
        android:id="@+id/passwordResetNewPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordResetHeaderSummary">

        <TextView
            android:id="@+id/passwordResetNewPasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:labelFor="@id/passwordResetNewPasswordEdittext"
            android:text="@string/new_password_label"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passwordResetNewPasswordEdittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edittext"
            android:inputType="textPassword"
            tools:ignore="Autofill" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordResetConfirmPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/passwordResetNewPasswordLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordResetNewPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordResetNewPasswordLayout">

        <TextView
            android:id="@+id/passwordResetConfirmPasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:labelFor="@id/passwordResetConfirmPasswordEdittext"
            android:text="@string/confirm_new_password_label"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passwordResetConfirmPasswordEdittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edittext"
            android:inputType="textPassword"
            tools:ignore="Autofill" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_btn_blue"
        android:fontFamily="@font/raleway"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordResetConfirmPasswordLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordResetConfirmPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordResetConfirmPasswordLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>